Add multi-model support for Ballerina persist (#441)
* [Automated] Update the native jar versions

* Add multi-model support for persist

* Update specification

* Update dependency versions

* Add test cases

* Update changelog

* Fix test failures

* Address sonar scan issues

* Update copyright year

* Address coderabbit suggestions

* Address copilot suggestions

* Refactor schema validation to include model file name in error messages

* Refactor model file name handling to improve clarity and consistency

* Update persist.sql-native dependency version to 1.7.1

* Add copyright notice to main.bal and model.bal files